# Cerium

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.crm
src/: arenaallocator.hpp  codegen.hpp  error.hpp  main.cpp  parser.hpp  token.hpp  tokenize.hpp  varaibles.hpp
